Bug #42939
MgrMonitor: blacklist previous instance of ceph-mgr during failover
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus
Regression:
No
Severity:
3 - minor
Description
This wasn't realized as necessary early on in the ceph-mgr development because the mgr didn't interact with RADOS. However, now it is becoming common for plugins to store data there. It's important that the previous instance can no longer interact with RADOS while the new mgr takes over.
See also discussion here: https://github.com/ceph/ceph/pull/31746
Related issues
History
#1 Updated by Patrick Donnelly about 1 year ago
- Description updated (diff)
#2 Updated by Patrick Donnelly about 1 year ago
- Description updated (diff)
- Status changed from New to In Progress
#3 Updated by Patrick Donnelly about 1 year ago
- Description updated (diff)
#4 Updated by Patrick Donnelly about 1 year ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 31797
#5 Updated by Patrick Donnelly about 1 year ago
- Status changed from Fix Under Review to Pending Backport
#6 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #43139: nautilus: MgrMonitor: blacklist previous instance of ceph-mgr during failover added
#7 Updated by Nathan Cutler 12 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".